# periplon

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  COVERAGE_ANALYSIS.md  COVERAGE_GAPS_BELOW_80.md  COVERAGE_IMPROVEMENT_PROGRESS.md  COVERAGE_PRIORITY_MATRIX.md  COVERAGE_SESSION_REPORT.md  COVERAGE_SUMMARY.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  WORKFLOW_COMPLETION_REPORT.md  WORKFLOW_FINAL_SUMMARY.md  build.rs  justfile  prioritized_features.json
.cargo/: audit.toml  config.toml
.claude/tasks/: example-file-processor.task.yaml  google-drive-upload.task.yaml
.github/workflows/: ci.yml  conventional-release.yml  nightly.yml  release.yml  tui_ci.yml
benches/: dsl_benchmarks.rs
docs/: README.md  debugging-architecture.md  debugging-implementation-summary.md  debugging-progress.md  phase2-complete.md  phase2-integration-status.md
docs/api/: CLI_IMPLEMENTATION_SUMMARY.md  DSL_FEATURES_INVENTORY.md  DSL_IMPLEMENTATION.md  DSL_NL_GENERATION.md  PERFORMANCE_OPTIMIZATIONS.md  SECURITY_AUDIT.md  SERVER_IMPLEMENTATION.md  WEB_UI_IMPLEMENTATION.md  dsl-plan.md  dsl.md  message-types.md
docs/archive/: BROKEN_PIPE_FIX.md  CI_CD_SETUP.md  COMPILATION_FIXES_APPLIED.md  DOD_AUTO_ELEVATE_TEST_RESULTS.md  DSL_STRUCTURE_FIXES.md  IMPLEMENTATION_CHECKLIST.md  LOADER_IMPLEMENTATION_CHECKLIST.md  NOTIFICATION_DELIVERY_IMPLEMENTATION.md  NOTIFICATION_SYSTEM_COMPLETE.md  NOTIFICATION_VALIDATION.md  NO_DUPLICATION_FIX.md  READY_FOR_COMPILATION.md  READY_TO_COMPILE.md  STDIO_CONTEXT_DSL_INTEGRATION.md  STDIO_CONTEXT_IMPLEMENTATION.md  STDIO_CONTEXT_INTEGRATION.md  STDIO_CONTEXT_MANAGEMENT_DESIGN.md  STDIO_CONTEXT_MIGRATION.md  STDIO_CONTEXT_STATUS.md  STDIO_CONTEXT_SUMMARY.md  TASK_GROUPS_LOADER_SUMMARY.md  TUI_TEST_STATUS.md  analysis_phase3_4.md  dod_test_results.md  phase2_design.md  phase3_test_results.md  phase4_integration_analysis.md  stdplan.md  test_generator_no_duplication.md  test_summary.md
docs/features/: DATA_FETCHER_README.md  EMBEDDED_WEB_UI.md  HTTP_COLLECTION_SUMMARY.md  README.md  STDIO_CONTEXT_README.md  TASK_OUTPUT_SYNTAX.md  api-reference.md  architecture.md  conditional-tasks.md  definition-of-done.md  loop-cookbook.md  loop-patterns.md  loop-tutorial.md  notifications.md  notifications_delivery.md  predefined-tasks-lockfile.md  server-mode.md  subflows.md  task-groups-guide.md  task-groups-loader.md  tutorial.md
docs/guides/: CLI_GUIDE.md  CLI_USAGE.md  DSL_QUICKSTART.md  NOTIFICATION_QUICK_START.md  STDIO_CONTEXT_QUICKSTART.md  architecture.md  ci-cd-quick-reference.md  ci-cd.md  configuration.md  dsl-overview.md  error-handling.md  installation.md  iterative-pattern-implementation.md  predefined-tasks-quickstart.md  quick-start.md  testing.md
docs/internal/: ANALYSIS_REPORT.md  IMPLEMENTATION_SUMMARY.md  PHASE5_SUMMARY.md  PHASE6_SUMMARY.md  PHASE7_SUMMARY.md  PHASE8_FINAL_SUMMARY.md  PHASE8_SUMMARY.md  TIMEOUT_FIX_SUMMARY.md  WORKFLOW_VARIABLE_INTERPOLATION_FIX.md  notification_analysis.md  notification_implementation_summary.md  notification_schema_design.md  notification_test_results.md  predefined-tasks-implementation-status.md  predefined-tasks-implementation.md  predefined-tasks-phase1-summary.md
docs/tui/: 01-core-app-implementation.md  DOCUMENTATION_INDEX.md  HELP_QUICK_REFERENCE.md  IMPLEMENTATION_SUMMARY.md  README.md  TEST_README.md  TEST_SUITE.md  TUI_E2E_INTEGRATION_TESTS.md  TUI_EDITOR_TESTS.md  TUI_EXECUTION_MONITOR_TESTS.md  TUI_GENERATOR_TESTS.md  TUI_HELP_TESTS.md  TUI_MODAL_TESTS.md  TUI_STATE_BROWSER_TESTS.md  TUI_TEST_UTILITIES.md  TUI_VIEWER_TESTS.md  TUI_WORKFLOW_LIST_TESTS.md  architecture.md  architecture_analysis.md  architecture_design.md  developer-guide.md  editor_design.md  file_manager_implementation.md  generator_view.md  help-system.md  implementation_roadmap.md  overview.md  shortcuts.md  state_browser_guide.md  state_browser_implementation.md  troubleshooting.md  user-guide.md  validation_report.md  viewer.md
examples/: config.example.toml  llm_workflow.yaml  simple_llm_test.yaml
examples/dsl/: collaborative_research.yaml  data_pipeline.yaml  deterministic_tasks_example.yaml  dod-hint-demo.yaml  dod-permission-test.yaml  low-memory-workflow.yaml  notification_error_scenarios.yaml  notification_multi_channel.yaml  notification_ntfy_demo.yaml  research_pipeline.yaml  simple-dod-test.yaml  simple_file_organizer.yaml  stdio-context-example.yaml
examples/dsl_workflows/: 01_frontend_build.yaml  02_fullstack_deployment.yaml  03_api_development.yaml  04_ui_testing.yaml  05_pwa_build.yaml  (+49 more)
migrations/: 001_create_workflows_and_executions.sql  002_create_schedules.sql  003_create_users_organizations_teams.sql  004_create_roles_permissions.sql  005_create_api_keys_sessions_oauth.sql  006_create_resource_ownership.sql
scripts/: build-release-local.sh  bump-version.sh  validate-ci.sh
src/: data_fetcher.rs  error.rs  lib.rs  options.rs  testing.rs
tests/: auth_tests.rs  bash_permissions_test.rs  cli_group_commands_tests.rs  communication_tests.rs  dod_auto_elevate_test.rs  domain_tests.rs  execution_api_tests.rs  file_manager_integration_test.rs  git_integration_tests.rs  hierarchical_tests.rs  integration_tests.rs  loop_tests.rs  notification_mcp_tests.rs  notification_tests.rs  options_test.rs  parent_dependency_resolution_test.rs  parent_task_no_execute_test.rs  parent_task_no_required_attributes_test.rs  phase3_integration_complete.rs  phase3_lockfile_update_tests.rs  phase4_groups_integration.rs  predefined_tasks_tests.rs  queue_backend_tests.rs  schedule_api_tests.rs  session_test.rs  storage_backend_tests.rs  subflow_tests.rs  test_basic_dsl_features.rs  test_error_handling.rs  test_loop_types.rs  test_utilities_demo.rs  test_variable_interpolation.rs  tui_dashboard_app_state_e2e_tests.rs  tui_e2e_integration.rs  tui_editor_keyboard_tests.rs  tui_editor_rendering_tests.rs  tui_execution_monitor_keyboard_tests.rs  tui_execution_monitor_rendering_tests.rs  tui_execution_scheduling_e2e_tests.rs  tui_executions_page_e2e_tests.rs  (+19 more)
web/: Dockerfile  README.md  next.config.js  package-lock.json  package.json
(+244 files in other folders)
